RESOLVED FIXED171543
[ES6] Arrow function. Issue in access to this after eval('super()') within constructor
https://bugs.webkit.org/show_bug.cgi?id=171543
Summary [ES6] Arrow function. Issue in access to this after eval('super()') within co...
GSkachkov
Reported 2017-05-02 01:36:55 PDT
Hmm, during investigation error 171274 I faced in error in binding `this` & superCall in arrow function. ``` class A extends Object { constructor () { var arrow = () => { eval('super()'); print(this.id);} arrow(); } }; new A // ReferenceError: Cannot access uninitialized variable. But should be OK. ``` Before I was sure that we always load `this` from virtual scope in arrow function within constructor, but it is not true
Attachments
Patch (4.17 KB, patch)
2017-05-02 12:34 PDT, GSkachkov
no flags
GSkachkov
Comment 1 2017-05-02 12:34:37 PDT
Created attachment 308841 [details] Patch Uplaoded fix
Saam Barati
Comment 2 2017-05-06 09:47:14 PDT
Comment on attachment 308841 [details] Patch r=me
WebKit Commit Bot
Comment 3 2017-05-06 10:16:15 PDT
Comment on attachment 308841 [details] Patch Clearing flags on attachment: 308841 Committed r216329: <http://trac.webkit.org/changeset/216329>
WebKit Commit Bot
Comment 4 2017-05-06 10:16:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.