[ES6] Arrow function. Issue in access to this after eval('super()') within constructor https://bugs.webkit.org/show_bug.cgi?id=171543

Reviewed by Saam Barati.

JSTests:

* stress/arrowfunction-lexical-bind-supercall-4.js:
(J):
(K):

Source/JavaScriptCore:

Current patch force to use 'this' within arrow function or eval
from virtual scope each time, instead of using thisRegister.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::ensureThis):


Canonical link: https://commits.webkit.org/188685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216329 268f45cc-cd09-0410-ab3c-d52691b4dbfc